@@ -1,0 +1,9 @@
+// Copyright 2002-2012, University of Colorado
+package edu.colorado.phet.functions.model;
+
+/**
+ * @author Sam Reid
+ */
+public enum Type {
+    SHAPE, TEXT, NUMBER
+}
